--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,7 @@
-.activeRoute {
-  font-weight: bold;
-  text-decoration: underline;
+.container {
+  width: 100% !important;
+}
+
+.logo {
+  border-left: none !important;
 }
