--- a/src/layouts/CoreLayout/CoreLayout.scss
+++ b/src/layouts/CoreLayout/CoreLayout.scss
@@ -1,3 +1,9 @@
-.mainContainer {
-  padding-top:20px;
+.container {
+  height: 100%;
+  position: relative;
+}
+
+.section {
+  height: 100%;
+  padding-top: 6em;
 }
