--- a/src/layouts/CoreLayout/CoreLayout.scss
+++ b/src/layouts/CoreLayout/CoreLayout.scss
@@ -3,7 +3,11 @@
   position: relative;
 }
 
-.section {
-  height: 100%;
-  padding-top: 6em;
+.sidebar {
+  width: 100% !important;
+  height: 100% !important;
+}
+
+.noPadding {
+  padding: 0px !important;
 }
