Separate landing page for admin and user

--- a/src/layouts/CoreLayout/CoreLayout.scss
+++ b/src/layouts/CoreLayout/CoreLayout.scss
@@ -1,10 +1,11 @@
 .container {
   height: 100%;
   position: relative;
+  //overflow: hidden;
 }
 
 .content {
   height: 100%;
-  padding-top: 6em;
-  background-color: #edecec;
+  margin-top: 64px;
+  //overflow: scroll;
 }
