--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -12,6 +12,7 @@ For example:
 */
 @import "transitions";
 @import "semantic-ui-overrides";
+@import "calendar";
 
 .clearing:after {
   content: ".";
