start profile refactoring

--- a/src/layouts/CoreLayout/CoreLayout.scss
+++ b/src/layouts/CoreLayout/CoreLayout.scss
@@ -1,11 +1,9 @@
 .container {
   height: 100%;
   position: relative;
-  //overflow: hidden;
 }
 
-.content {
+.section {
   height: 100%;
-  margin-top: 64px;
-  //overflow: scroll;
+  padding-top: 6em;
 }
