date range filter

--- a/src/routes/Transactions/components/TransactionsView.scss
+++ b/src/routes/Transactions/components/TransactionsView.scss
@@ -5,9 +5,9 @@
 }
 
 .filter {
-  margin: 0 10px;
+  margin: 0 5px !important;
 }
 
 .filter:first-child {
-  margin-left: 0;
+  margin-left: 0 !important;
 }
