--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -12,11 +12,10 @@ For example:
 */
 @import "transitions";
 @import "semantic-ui-overrides";
-@import "calendar";
 @import "shopify";
 
 .ui {
-  font-family: RobotoDraft,Roboto,'Helvetica Neue',sans-serif !important;
+  font-family: 'Muli', sans-serif !important;
 }
 
 .clearing:after {
