code cleanup part 2

--- a/src/styles/_semantic-ui-overrides.scss
+++ b/src/styles/_semantic-ui-overrides.scss
@@ -137,13 +137,13 @@ i.icon.loading {
 }
 
 .ui.toggle.checkbox.inverted input:checked ~ label:before {
-  background-color: rgba(0,0,0,.5) !important;
+  background-color: rgba(0, 0, 0, .5) !important;
 }
 
 .ui.toggle.checkbox.inverted input ~ label:before {
-  background-color: rgba(0,0,0,.5) !important;
+  background-color: rgba(0, 0, 0, .5) !important;
 }
 
-.ui.toggle.checkbox.green input:checked~label:before {
+.ui.toggle.checkbox.green input:checked ~ label:before {
   background-color: #00796b !important;
 }
