--- a/src/components/DateTimeInput/DateTimeInput.scss
+++ b/src/components/DateTimeInput/DateTimeInput.scss
@@ -14,10 +14,10 @@
     width: 250px;
     padding: 4px;
     margin-top: .5em;
-    border-radius: .28571429rem ;
+    border-radius: .28571429rem;
     z-index: 99999 !important;
     background: #fff;
-    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.15);
+    box-shadow: 0 2px 4px 0 rgba(34, 36, 38, .12), 0 2px 10px 0 rgba(34, 36, 38, .15);
     border: 1px solid #f9f9f9;
   }
   .rdtOpen .rdtPicker {
