--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -13,6 +13,7 @@ For example:
 @import "transitions";
 @import "semantic-ui-overrides";
 @import "shopify";
+@import "woocommerce";
 
 body {
   font-family: 'Muli', sans-serif;
