--- a/src/components/MessagesStack/MessagesStack.scss
+++ b/src/components/MessagesStack/MessagesStack.scss
@@ -1,9 +1,8 @@
 .wrapper {
   position: fixed;
   right: 15px;
-  left: 15px;
-  top: 85px;
-  max-width: 400px;
+  top: 80px;
+  width: 400px;
   margin: auto;
   z-index: 10000;
 }
