--- a/src/routes/Widget/containers/WidgetView.scss
+++ b/src/routes/Widget/containers/WidgetView.scss
@@ -10,9 +10,8 @@
       vertical-align: middle;
     }
 
-    span {
-      margin-left: 15px;
-      font-weight: bold;
+    :global(.labeled.input) {
+      margin-right: 15px;
     }
   }
 
@@ -23,5 +22,6 @@
     padding: 5px;
     border: 1px solid #cccccc;
     border-radius: 3px;
+    white-space: normal;
   }
 }
