improve user view for admins, improve verification flow

--- a/src/routes/User/components/UserHeader.scss
+++ b/src/routes/User/components/UserHeader.scss
@@ -1,4 +1,8 @@
-.button {
-  margin-top: 42px !important;
-  margin-bottom: 2px !important;
+.header {
+  display: flex;
+  align-items: center;
+}
+
+.spacer {
+  flex: 1;
 }
