lint fixes, add currency to sub accounts, minor improvements

--- a/src/styles/_semantic-ui-overrides.scss
+++ b/src/styles/_semantic-ui-overrides.scss
@@ -147,3 +147,9 @@ i.icon.loading {
 .ui.toggle.checkbox.green input:checked ~ label:before {
   background-color: #00796b !important;
 }
+
+.ui.table {
+  tr.clickable {
+    cursor: pointer;
+  }
+}
