--- a/src/routes/Transactions/components/TransactionDetails.scss
+++ b/src/routes/Transactions/components/TransactionDetails.scss
@@ -1,9 +1,9 @@
 .noMarginTop {
-  margin-top: 0px !important;
+  margin-top: 0 !important;
 }
 
 .noMarginBottom {
-  margin-bottom: 0px !important;
+  margin-bottom: 0 !important;
 }
 
 .modalContent {
