--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -56,4 +56,14 @@ a.disabled {
   cursor: pointer;
 }
 
+code, pre {
+  font-size: small;
+  font-weight: 100;
+  color: #555555;
+  padding: 5px;
+  border: 1px solid #cccccc;
+  border-radius: 3px;
+  white-space: normal;
+}
+
 
