--- a/src/routes/SubAccount/routes/Widget/components/WidgetView.scss
+++ b/src/routes/SubAccount/routes/Widget/components/WidgetView.scss
@@ -1,8 +1,4 @@
-.amount {
-  input {
-    min-width: 100px;
-  }
-  input, span {
-    vertical-align: middle;
-  }
+.disabled {
+  pointer-events: none;
+  opacity: 0.6;
 }
