--- a/src/routes/SubAccount/routes/Widget/components/WidgetView.scss
+++ b/src/routes/SubAccount/routes/Widget/components/WidgetView.scss
@@ -1,4 +1,12 @@
+.widget {
+  display: inline-block;
+}
+
 .disabled {
   pointer-events: none;
   opacity: 0.6;
+}
+
+.hidden {
+  display: none;
 }
